--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tabler/icons-react": "^2.46.0",
     "@tsparticles/engine": "^3.1.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.1.0",
     "animejs": "^3.2.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-simple-typewriter": "^5.0.1",
     "rehype-sanitize": "^6.0.0",
     "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.1",
     "three.js": "^0.77.0",
     "tsparticles": "^3.1.0",
