--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qtpc",
+  "name": "qtpcweb",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,38 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@tabler/icons-react": "^2.46.0",
-    "@tsparticles/engine": "^3.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tabler/icons-react": "^2.47.0",
+    "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.1.0",
-    "animejs": "^3.2.2",
+    "@tsparticles/slim": "^3.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "lucide-react": "^0.316.0",
-    "next": "14.1.0",
+    "lucide-react": "^0.344.0",
+    "next": "14.1.1",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-simple-typewriter": "^5.0.1",
-    "rehype-sanitize": "^6.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.160.1",
-    "three.js": "^0.77.0",
-    "tsparticles": "^3.1.0",
-    "uninstall": "^0.0.0"
+    "vara": "^1.4.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/animejs": "^3.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/three": "^0.160.0",
+    "@types/vara": "^1.1.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
